Revise README for Ubuntu compatibility and clarity
Updated README for Ubuntu-specific instructions and improved clarity on prerequisites and setup steps.